package com.diguage.didp.factorymethod;

/**
 * Factory 类
 *
 * @author D瓜哥, https://www.diguage.com/
 * @since 2017-05-19 17:53:34
 */
public abstract class Factory {
  public abstract Product factoryMethod();
}
